Fix small layout issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -138,7 +138,7 @@ body::-webkit-scrollbar-thumb {
   gap: 2.5rem;
 
   &__title {
-    font-size: 3rem;
+    font-size: 2.9rem;
     font-weight: 600;
     color: $secondary;
     position: relative;
@@ -257,7 +257,7 @@ body::-webkit-scrollbar-thumb {
 
   &__btn {
     font-size: 1.5rem;
-    padding: 2.5rem;
+    padding: 2.5rem 1.5rem;
     background-color: $secondary;
     color: $primary;
     border-left: 2px solid $primary;
